--- a/src/css/base/common.css
+++ b/src/css/base/common.css
@@ -1,13 +1,15 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
-    height: 100%;
+    font-family: 'Montserrat', sans-serif;
     background-color: #0b1d26;
     color: #fff;
 }
 
 .container {
-    max-width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 80px;
-    padding-right: 80px;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
 }
