--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -16,7 +16,7 @@
 
 .header__logo {
     font-family: 'Playfair Display', serif;
-    font-size: 22px;
+    font-size: 32px;
     font-weight: 700;
     letter-spacing: 0.32px;
     text-transform: capitalize;
@@ -24,38 +24,33 @@
 
 .header__nav-list {
     display: flex;
+    gap: 40px;
 }
 
-.header__nav-item {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 16px;
+.header__nav-link {
+    font-size: 18px;
     font-weight: 700;
-}
-
-.header__nav-item:not(:last-child) {
-    margin-right: 40px;
+    transition: color 300ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header__nav-link:hover,
 .header__nav-link:focus {
     color: #FBD784;
-    transition: color 250ms ease-in-out;
 }
 
 .header__button {
     display: flex;
     align-items: center;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 15px;
+    font-size: 17px;
     font-weight: 700;
     color: #FFF;
     background-color: transparent;
+    transition: color 300ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header__button:hover,
 .header__button:focus {
     color: #FBD784;
-    transition: color 250ms ease-in-out;
 }
 
 .header__button-icon {
