--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,13 +3,13 @@
     <a href="#" class="header__logo">MNTN</a>
     <ul class="header__nav-list">
       <li class="header__nav-item">
-        <a href="" class="header__nav-link">Equipment</a>
+        <a href="#equipment" class="header__nav-link">Equipment</a>
       </li>
       <li class="header__nav-item">
-        <a href="" class="header__nav-link">About us</a>
+        <a href="#about-us" class="header__nav-link">About us</a>
       </li>
       <li class="header__nav-item">
-        <a href="" class="header__nav-link">Blog</a>
+        <a href="#blog" class="header__nav-link">Blog</a>
       </li>
     </ul>
     <button type="button" class="header__button">
