--- a/src/partials/main-content.html
+++ b/src/partials/main-content.html
@@ -1,7 +1,7 @@
 <!-- Main Content -->
 <section class="content">
   <div class="content__container container">
-    <article class="article__thumb">
+    <article class="article__thumb" id="about-us">
       <div class="article__thumb--content">
         <p class="article__number">01</p>
         <p class="article__label">get started</p>
@@ -31,7 +31,7 @@
         class="article__img"
       />
     </article>
-    <article class="article__thumb">
+    <article class="article__thumb" id="equipment">
       <div class="article__thumb--content">
         <p class="article__number">02</p>
         <p class="article__label">hiking essentials</p>
@@ -61,7 +61,7 @@
         class="article__img"
       />
     </article>
-    <article class="article__thumb">
+    <article class="article__thumb" id="blog">
       <div class="article__thumb--content">
         <p class="article__number">03</p>
         <p class="article__label">where you go is the key</p>
