--- a/src/css/layout/hero.css
+++ b/src/css/layout/hero.css
@@ -2,15 +2,51 @@
     position: fixed;
     top: 30%;
     right: 10%;
-    width: 65px;
-    height: 240px;
-    border: 2px solid #fff;
+    /* border: 2px solid #fff; */
     z-index: 100;
+}
+
+.progress-bar__list {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 40px;
+}
+
+.progress-bar__link {
+    position: relative;
+    font-size: 18px;
+    font-weight: 700;
+    padding: 20px 0;
+}
+
+.progress-bar__link:hover {
+    color: #FBD784;
+}
+
+.progress-bar__link::after {
+    content: "";
+    position: absolute;
+    right: -32px;
+    top: 0;
+    width: 3px;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.5);
+    transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.active {
+    font-weight: 800;
+}
+
+.active::after {
+    background-color: #FFF;
 }
 
 /* =============== Hero ================= */
 .parallax {
     min-height: 100vh;
+    background-color: #FFF;
 }
 
 .parallax__body {
