--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,6 +1,21 @@
-<div class="progress-bar"></div>
+<div class="progress-bar">
+  <ul class="progress-bar__list">
+    <li class="progress-bar__item">
+      <a href="#hero" class="progress-bar__link active">Start</a>
+    </li>
+    <li class="progress-bar__item">
+      <a href="#about-us" class="progress-bar__link">01</a>
+    </li>
+    <li class="progress-bar__item">
+      <a href="#equipment" class="progress-bar__link">02</a>
+    </li>
+    <li class="progress-bar__item">
+      <a href="#blog" class="progress-bar__link">03</a>
+    </li>
+  </ul>
+</div>
 <!-- Hero -->
-<section class="parallax">
+<section class="parallax" id="hero">
   <div class="parallax__body">
     <div class="parallax__container container">
       <div class="social-links">
