--- a/src/css/layout/main-content.css
+++ b/src/css/layout/main-content.css
@@ -26,6 +26,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 50px;
     padding-bottom: 150px;
 }
 
@@ -46,7 +47,6 @@
 
 .article__thumb--content {
     position: relative;
-    padding-left: 150px;
 }
 
 .article__title {
