--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -38,6 +38,103 @@
     color: #FBD784;
 }
 
+.header__sound-thumb {
+    display: flex;
+    gap: 20px;
+}
+
+/* ==================== Music Icon Start =====================  */
+
+.Sound {
+    width: 40px;
+    height: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    cursor: pointer;
+}
+
+.Sound:hover span {
+    background-color: #FBD784;
+}
+
+.Sound span {
+    display: block;
+    width: 4px;
+    margin-right: 1px;
+    background-color: #fff;
+    animation: sound 0ms -.8s linear infinite alternate;
+    transition: height .8s, background .3s;
+}
+
+.Sound span:nth-child(1) {
+    height: 1px;
+    animation-duration: 474ms;
+}
+
+.Sound span:nth-child(2) {
+    height: 3px;
+    animation-duration: 433ms;
+}
+
+.Sound span:nth-child(3) {
+    height: 5px;
+    animation-duration: 407ms;
+}
+
+.Sound span:nth-child(4) {
+    height: 7px;
+    animation-duration: 458ms;
+}
+
+.Sound span:nth-child(5) {
+    height: 8px;
+    animation-duration: .4s;
+}
+
+.Sound.off span {
+    animation: none;
+}
+
+.Sound.off span:nth-child(1) {
+    height: 8px;
+    animation-duration: 474ms;
+}
+
+.Sound.off span:nth-child(2) {
+    height: 3px;
+    animation-duration: 433ms;
+}
+
+.Sound.off span:nth-child(3) {
+    height: 5px;
+    animation-duration: 407ms;
+}
+
+.Sound.off span:nth-child(4) {
+    height: 4px;
+    animation-duration: 458ms;
+}
+
+.Sound.off span:nth-child(5) {
+    height: 8px;
+    animation-duration: .4s;
+}
+
+@keyframes sound {
+    0% {
+        opacity: .35;
+        height: 6px
+    }
+
+    100% {
+        opacity: 1;
+        height: 23px
+    }
+}
+
+/* ==================== Music Icon End ======================= */
+
 .header__button {
     display: flex;
     align-items: center;
