--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -12,11 +12,24 @@
         <a href="#blog" class="header__nav-link">Blog</a>
       </li>
     </ul>
-    <button type="button" class="header__button">
-      <svg class="header__button-icon">
-        <use href="./img/icons/symbol-defs.svg#icon-account"></use>
-      </svg>
-      Account
-    </button>
+    <div class="header__sound-thumb">
+      <div class="Sound">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <audio id="background-audio" autoplay loop>
+          <source src="/mp3/wind-outside-sound-ambient.mp3" type="audio/mpeg" />
+          Your browser does not support the audio element.
+        </audio>
+      </div>
+      <button type="button" class="header__button">
+        <svg class="header__button-icon">
+          <use href="./img/icons/symbol-defs.svg#icon-account"></use>
+        </svg>
+        Account
+      </button>
+    </div>
   </div>
 </header>
