--- a/src/css/layout/main-content.css
+++ b/src/css/layout/main-content.css
@@ -1,16 +1,12 @@
 .content {
-    /* background-color: #0B1D26; */
-    background: linear-gradient(to bottom, rgba(11, 29, 38, 0) 0%, rgba(11, 29, 38, 0.5) 2%, #0B1D26 5%);
+    background: linear-gradient(to bottom, rgba(11, 29, 38, 0.5) 0%, rgba(11, 29, 38, 0.8) 2%, #0B1D26 5%);
     position: relative;
     z-index: 2;
 }
 
-.content__container {
-    padding-left: 150px;
-    padding-right: 150px;
-}
+.content__container {}
 
-/* .content::before {
+.content::before {
     content: '';
     position: absolute;
     top: 0;
@@ -18,9 +14,9 @@
     width: 100%;
     height: 300px;
     transform: translate(0px, -100%);
-    background: linear-gradient(180deg, rgba(11, 29, 38, 0.00) 0%, #0B1D26 100%);
+    background: linear-gradient(180deg, rgba(11, 29, 38, 0.00) 0%, rgba(11, 29, 38, 0.5) 100%);
     pointer-events: none;
-} */
+}
 
 .article__thumb {
     display: flex;
