--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -19,8 +19,8 @@
         <span></span>
         <span></span>
         <span></span>
-        <audio id="background-audio" autoplay loop>
-          <source src="/mp3/wind-outside-sound-ambient.mp3" type="audio/mpeg" />
+        <audio id="background-audio" autoplay loop preload="auto">
+          <source src="/mp3/snow-rain-bird-chirping.mp3" type="audio/mpeg" />
           Your browser does not support the audio element.
         </audio>
       </div>
