--- a/src/css/layout/main-content.css
+++ b/src/css/layout/main-content.css
@@ -110,10 +110,15 @@
 
 /* ========== Front Clouds =================== */
 .images-parallax__front-clouds-01 {
-    background: url("../../img/front-clouds/7.png") top / cover no-repeat;
+    background: url("../../img/front-clouds/7.png") top / contain no-repeat;
     top: 60%;
-    left: -30%;
+    left: 30%;
     z-index: 3;
+
+    position: absolute;
+    -webkit-animation: clouds 80s ease infinite;
+    animation: clouds 80s ease infinite;
+    z-index: 100;
 }
 
 .images-parallax__front-clouds-02 {
