--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,3 +4,4 @@
 @import url('./layout/header.css');
 @import url('./layout/hero.css');
 @import url('./layout/main-content.css');
+@import url('./layout/footer.css');
