--- a/src/partials/main-content.html
+++ b/src/partials/main-content.html
@@ -2,7 +2,7 @@
 <section class="content">
   <div class="content__container container">
     <article class="article__thumb" id="about-us">
-      <div class="article__thumb--content">
+      <div class="article__thumb--content" data-aos="fade-right">
         <p class="article__number">01</p>
         <p class="article__label">get started</p>
         <h2 class="article__title">What level of hiker are you?</h2>
@@ -21,18 +21,19 @@
             ></use>
           </svg>
         </a>
-        <div class="images-parallax__item front-slide-bottom-image">
+        <div class="images-parallax__item">
           <div class="images-parallax__front-clouds-01"></div>
         </div>
       </div>
       <img
+        data-aos="fade-left"
         src="./img/article-img/001.jpg"
         alt="hiking man"
         class="article__img"
       />
     </article>
     <article class="article__thumb" id="equipment">
-      <div class="article__thumb--content">
+      <div class="article__thumb--content" data-aos="fade-left">
         <p class="article__number">02</p>
         <p class="article__label">hiking essentials</p>
         <h2 class="article__title">Picking the right Hiking Gear!</h2>
@@ -56,13 +57,14 @@
         </div>
       </div>
       <img
+        data-aos="fade-right"
         src="./img/article-img/002.jpg"
         alt="hiking man"
         class="article__img"
       />
     </article>
     <article class="article__thumb" id="blog">
-      <div class="article__thumb--content">
+      <div class="article__thumb--content" data-aos="fade-up-right">
         <p class="article__number">03</p>
         <p class="article__label">where you go is the key</p>
         <h2 class="article__title">Understand Your Map & Timing</h2>
@@ -81,11 +83,9 @@
             ></use>
           </svg>
         </a>
-        <div class="images-parallax__item front-slide-bottom-image">
-          <div class="images-parallax__front-clouds-01"></div>
-        </div>
       </div>
       <img
+        data-aos="fade-up-left"
         src="./img/article-img/003.jpg"
         alt="hiking man"
         class="article__img"
