--- a/src/partials/main-content.html
+++ b/src/partials/main-content.html
@@ -2,7 +2,7 @@
 <section class="content">
   <div class="content__container container">
     <article class="article__thumb" id="about-us">
-      <div class="article__thumb--content" data-aos="fade-right">
+      <div class="article__thumb--content" data-aos="fade-up">
         <p class="article__number">01</p>
         <p class="article__label">get started</p>
         <h2 class="article__title">What level of hiker are you?</h2>
@@ -21,12 +21,12 @@
             ></use>
           </svg>
         </a>
-        <div class="images-parallax__item">
+        <div class="images-parallax__item-content">
           <div class="images-parallax__front-clouds-01"></div>
         </div>
       </div>
       <img
-        data-aos="fade-left"
+        data-aos="fade-up"
         src="./img/article-img/001.jpg"
         alt="hiking man"
         class="article__img"
@@ -52,7 +52,7 @@
             ></use>
           </svg>
         </a>
-        <div class="images-parallax__item">
+        <div class="images-parallax__item-content">
           <div class="images-parallax__front-clouds-02"></div>
         </div>
       </div>
