--- a/src/css/layout/main-content.css
+++ b/src/css/layout/main-content.css
@@ -4,7 +4,10 @@
     z-index: 2;
 }
 
-.content__container {}
+.content__container {
+    overflow: hidden;
+    max-width: 100%;
+}
 
 .content::before {
     content: '';
@@ -20,7 +23,8 @@
 
 .article__thumb {
     display: flex;
-    justify-content: space-between;
+    gap: 60px;
+    justify-content: center;
     align-items: center;
     padding-bottom: 150px;
 }
@@ -109,26 +113,65 @@
 }
 
 /* ========== Front Clouds =================== */
-.images-parallax__front-clouds-01 {
-    background: url("../../img/front-clouds/7.png") top / contain no-repeat;
-    top: 60%;
-    left: 30%;
-    z-index: 3;
-
+.images-parallax__item-content {
+    z-index: -1;
     position: absolute;
-    -webkit-animation: clouds 80s ease infinite;
-    animation: clouds 80s ease infinite;
-    z-index: 100;
+    /* overflow: hidden; */
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+}
+
+.images-parallax__front-clouds-01 {
+    position: absolute;
+    width: 100vw;
+    height: 100%;
+    background: url("../../img/front-clouds/5.png") top / contain no-repeat;
+    left: 40%;
+    top: 20%;
+
+    -webkit-animation: clouds-content 300s ease-out infinite;
+    animation: clouds-content 300s ease-out infinite;
 }
 
 .images-parallax__front-clouds-02 {
-    background: url("../../img/front-clouds/8.png") top / contain no-repeat;
-    top: 90%;
-    left: 0;
-    z-index: 3;
-
     position: absolute;
-    -webkit-animation: clouds 80s ease infinite;
-    animation: clouds 80s ease infinite;
-    z-index: 100;
+    width: 100%;
+    height: 100%;
+    background: url("../../img/front-clouds/8.png") top / contain no-repeat;
+    top: 30%;
+
+    -webkit-animation: clouds-content 300s ease-out infinite;
+    animation: clouds-content 300s ease-out infinite;
+}
+
+@-webkit-keyframes clouds-content {
+
+    0% {
+        -webkit-transform: translateX(40%);
+        transform: translateX(40%);
+    }
+
+    100% {
+        -webkit-transform: translateX(-160%);
+        transform: translateX(-160%);
+        opacity: 0.7;
+    }
+
+}
+
+@keyframes clouds-content {
+
+    0% {
+        -webkit-transform: translateX(40%);
+        transform: translateX(40%);
+    }
+
+    100% {
+        -webkit-transform: translateX(-160%);
+        transform: translateX(-160%);
+        opacity: 0.7;
+    }
+
 }
