--- a/src/partials/main-content.html
+++ b/src/partials/main-content.html
@@ -83,6 +83,9 @@
             ></use>
           </svg>
         </a>
+        <div class="images-parallax__item-content">
+          <div class="images-parallax__front-clouds-03"></div>
+        </div>
       </div>
       <img
         data-aos="fade-up-left"
