--- a/src/css/layout/main-content.css
+++ b/src/css/layout/main-content.css
@@ -167,7 +167,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background: url("../../img/front-clouds/8.png") top / contain no-repeat;
+    background: url("../../img/front-clouds/4.png") top / contain no-repeat;
     top: 30%;
 
     -webkit-animation: clouds-content-02 300s ease-out infinite;
@@ -208,9 +208,9 @@
     position: absolute;
     width: 100vw;
     height: 100%;
-    background: url("../../img/front-clouds/3.png") top / contain no-repeat;
+    background: url("../../img/front-clouds/1.png") top / contain no-repeat;
     left: 40%;
-    top: 20%;
+    top: 0;
 
     -webkit-animation: clouds-content-03 300s ease-out infinite;
     animation: clouds-content-03 300s ease-out infinite;
