--- a/src/partials/main-content.html
+++ b/src/partials/main-content.html
@@ -2,7 +2,7 @@
 <section class="content">
   <div class="content__container container">
     <article class="article__thumb" id="about-us">
-      <div class="article__thumb--content" data-aos="fade-up">
+      <div class="article__thumb--content" data-aos="fade-right">
         <p class="article__number">01</p>
         <p class="article__label">get started</p>
         <h2 class="article__title">What level of hiker are you?</h2>
@@ -21,12 +21,11 @@
             ></use>
           </svg>
         </a>
-        <div class="images-parallax__item-content">
-          <div class="images-parallax__front-clouds-01"></div>
-        </div>
+      </div>
+      <div class="images-parallax__item-content">
+        <div class="images-parallax__front-clouds-01"></div>
       </div>
       <img
-        data-aos="fade-up"
         src="./img/article-img/001.jpg"
         alt="hiking man"
         class="article__img"
@@ -52,19 +51,18 @@
             ></use>
           </svg>
         </a>
-        <div class="images-parallax__item-content">
-          <div class="images-parallax__front-clouds-02"></div>
-        </div>
+      </div>
+      <div class="images-parallax__item-content">
+        <div class="images-parallax__front-clouds-02"></div>
       </div>
       <img
-        data-aos="fade-right"
         src="./img/article-img/002.jpg"
         alt="hiking man"
         class="article__img"
       />
     </article>
     <article class="article__thumb" id="blog">
-      <div class="article__thumb--content" data-aos="fade-up-right">
+      <div class="article__thumb--content" data-aos="fade-right">
         <p class="article__number">03</p>
         <p class="article__label">where you go is the key</p>
         <h2 class="article__title">Understand Your Map & Timing</h2>
@@ -83,12 +81,11 @@
             ></use>
           </svg>
         </a>
-        <div class="images-parallax__item-content">
-          <div class="images-parallax__front-clouds-03"></div>
-        </div>
+      </div>
+      <div class="images-parallax__item-content">
+        <div class="images-parallax__front-clouds-03"></div>
       </div>
       <img
-        data-aos="fade-up-left"
         src="./img/article-img/003.jpg"
         alt="hiking man"
         class="article__img"
