--- a/src/css/layout/main-content.css
+++ b/src/css/layout/main-content.css
@@ -81,15 +81,19 @@
     align-items: center;
 }
 
+.article__link:hover {
+    transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+    transform: scale(1.3);
+}
+
 .article__link__icon {
-    width: 16px;
-    height: 24px;
-    transform: rotate(-90deg);
+    width: 20px;
+    height: 28px;
     fill: #FBD784;
     margin-left: 16px;
 }
 
-/* .article__link:hover .article__link__icon {
+.article__link:hover .article__link__icon {
     animation-name: bounce;
     animation-duration: 2s;
     animation-timing-function: linear;
@@ -108,7 +112,7 @@
     100% {
         transform: translateX(0);
     }
-} */
+}
 
 .article__img {
     max-width: 450px;
