--- a/src/partials/main-content.html
+++ b/src/partials/main-content.html
@@ -16,9 +16,7 @@
         <a href="#" class="article__link"
           >read more
           <svg class="article__link__icon">
-            <use
-              href="./img/icons/symbol-defs.svg#icon-arrow_downward_24px"
-            ></use>
+            <use href="./img/icons/symbol-defs.svg#icon-arrow_right_24px"></use>
           </svg>
         </a>
       </div>
@@ -46,9 +44,7 @@
         <a href="#" class="article__link"
           >read more
           <svg class="article__link__icon">
-            <use
-              href="./img/icons/symbol-defs.svg#icon-arrow_downward_24px"
-            ></use>
+            <use href="./img/icons/symbol-defs.svg#icon-arrow_right_24px"></use>
           </svg>
         </a>
       </div>
@@ -76,9 +72,7 @@
         <a href="#" class="article__link"
           >read more
           <svg class="article__link__icon">
-            <use
-              href="./img/icons/symbol-defs.svg#icon-arrow_downward_24px"
-            ></use>
+            <use href="./img/icons/symbol-defs.svg#icon-arrow_right_24px"></use>
           </svg>
         </a>
       </div>
