--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,8 @@
 @import url('./base/reset.css');
 @import url('./base/common.css');
 
+@import url('./layout/loader.css');
+
 @import url('./layout/header.css');
 @import url('./layout/hero.css');
 @import url('./layout/main-content.css');
