--- a/src/partials/main-content.html
+++ b/src/partials/main-content.html
@@ -61,7 +61,7 @@
       <div class="article__thumb--content" data-aos="fade-right">
         <p class="article__number">03</p>
         <p class="article__label">where you go is the key</p>
-        <h2 class="article__title">Understand Your Map & Timing</h2>
+        <h2 class="article__title">Understand Your Map &amp; Timing</h2>
         <p class="article__text">
           To start, print out the hiking guide and map. If it’s raining, throw
           them in a Zip-Lock bag. Read over the guide, study the map, and have a
