--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -19,10 +19,10 @@
         <span></span>
         <span></span>
         <span></span>
-        <!-- <audio id="background-audio" autoplay loop preload="auto">
+        <audio id="background-audio" autoplay loop preload="auto">
           <source src="/mp3/wind-outside-sound-ambient.mp3" type="audio/mpeg" />
           Your browser does not support the audio element.
-        </audio> -->
+        </audio>
       </div>
       <button type="button" class="header__button">
         <svg class="header__button-icon">
