--- a/src/partials/loader.html
+++ b/src/partials/loader.html
@@ -1,3 +1,3 @@
-<div class="loader">
-  <div class="loader__title"></div>
+<div id="loader" class="loader-wrapper">
+  <div class="loader"></div>
 </div>
